2006-04-06 [colin]	2.1.0cvs9

	* src/folderview.c
		gettext patch to tell translators about _("#"),
		by Maxim Britov

2006-04-06 [colin]	2.1.0cvs8

	* src/textview.c
		Fix invalid GtkTextBIter after clicking "Display as text"

2006-04-06 [mones]	2.1.0cvs7

	* src/addr_compl.c
	* src/addrindex.c
	* src/addritem.c
	* src/codeconv.c
	* src/compose.c
	* src/filtering.c
	* src/folder.c
	* src/folder_item_prefs.c
	* src/folderview.c
	* src/localfolder.c
	* src/matcher.c
	* src/mimeview.c
	* src/prefs_msg_colors.c
	* src/prefs_spelling.c
	* src/prefs_themes.c
	* src/procmime.c
	* src/procmsg.c
	* src/stock_pixmap.c
	* src/summaryview.c
	* src/textview.c
	* src/toolbar.c
	* src/common/mgutils.c
	* src/common/prefs.c
	* src/common/ssl_certificate.c
	* src/gtk/colorlabel.c
	* src/gtk/quicksearch.c
	* src/plugins/pgpmime/pgpmime.c
	* src/plugins/spamassassin/spamassassin.c
		Removed redundant NULL checks for g_free() calls.
		Patch by Pawel Pekala.

2006-04-06 [mones]	2.1.0cvs6

	* src/prefs_actions.c
	* src/prefs_filtering.c
	* src/prefs_filtering_action.c
	* src/prefs_matcher.c
	* src/prefs_template.c
	* src/gtk/gtkutils.c
	* src/gtk/gtkutils.h
		Have a nice replace button. Patch by Pawel Pekala

2006-04-06 [colin]	2.1.0cvs5

	* src/addressbook.c
		Fix crash with empty columns

2006-04-05 [colin]	2.1.0cvs4

	* src/wizard.c
	* src/prefs_gtk.c
		Allow wizard customization with pre-filled values

2006-04-05 [colin]	2.1.0cvs3

	* src/textview.c
	* src/mimeview.c
	* src/mimeview.h
		Nicer messages in mimeview

2006-04-05 [colin]	2.1.0cvs2

	* src/addressbook.c
	* src/prefs_summaries.c
		i18n fix

2006-04-05 [colin]	2.1.0cvs1

	* src/plugins/pgpcore/plugin.c
	* src/plugins/pgpcore/select-keys.c
	* src/plugins/pgpcore/select-keys.h
	* src/plugins/pgpcore/sgpgme.c
	* src/plugins/pgpcore/sgpgme.h
	* src/plugins/pgpinline/pgpinline.c
	* src/plugins/pgpinline/plugin.c
	* src/plugins/pgpmime/pgpmime.c
	* src/plugins/pgpmime/plugin.c
		Factorize and generalize a bit 