@@ -1381,3 +1381,4 @@
 ( cvs diff -u -r 1.27.2.17 -r 1.27.2.18 src/addr_compl.c;  cvs diff -u -r 1.28.2.15 -r 1.28.2.16 src/addrindex.c;  cvs diff -u -r 1.13.2.5 -r 1.13.2.6 src/addritem.c;  cvs diff -u -r 1.65.2.46 -r 1.65.2.47 src/codeconv.c;  cvs diff -u -r 1.382.2.258 -r 1.382.2.259 src/compose.c;  cvs diff -u -r 1.60.2.14 -r 1.60.2.15 src/filtering.c;  cvs diff -u -r 1.213.2.87 -r 1.213.2.88 src/folder.c;  cvs diff -u -r 1.2.2.12 -r 1.2.2.13 src/folder_item_prefs.c;  cvs diff -u -r 1.207.2.91 -r 1.207.2.92 src/folderview.c;  cvs diff -u -r 1.3.4.3 -r 1.3.4.4 src/localfolder.c;  cvs diff -u -r 1.75.2.19 -r 1.75.2.20 src/matcher.c;  cvs diff -u -r 1.83.2.66 -r 1.83.2.67 src/mimeview.c;  cvs diff -u -r 1.1.2.19 -r 1.1.2.20 src/prefs_msg_colors.c;  cvs diff -u -r 1.5.2.21 -r 1.5.2.22 src/prefs_spelling.c;  cvs diff -u -r 1.3.2.40 -r 1.3.2.41 src/prefs_themes.c;  cvs diff -u -r 1.49.2.75 -r 1.49.2.76 src/procmime.c;  cvs diff -u -r 1.150.2.59 -r 1.150.2.60 src/procmsg.c;  cvs diff -u -r 1.25.2.22 -r 1.25.2.23 src/stock_pixmap.c;  cvs diff -u -r 1.395.2.190 -r 1.395.2.191 src/summaryview.c;  cvs diff -u -r 1.96.2.106 -r 1.96.2.107 src/textview.c;  cvs diff -u -r 1.43.2.42 -r 1.43.2.43 src/toolbar.c;  cvs diff -u -r 1.1.4.3 -r 1.1.4.4 src/common/mgutils.c;  cvs diff -u -r 1.5.2.5 -r 1.5.2.6 src/common/prefs.c;  cvs diff -u -r 1.4.2.6 -r 1.4.2.7 src/common/ssl_certificate.c;  cvs diff -u -r 1.2.2.12 -r 1.2.2.13 src/gtk/colorlabel.c;  cvs diff -u -r 1.1.2.37 -r 1.1.2.38 src/gtk/quicksearch.c;  cvs diff -u -r 1.1.2.32 -r 1.1.2.33 src/plugins/pgpmime/pgpmime.c;  cvs diff -u -r 1.18.2.32 -r 1.18.2.33 src/plugins/spamassassin/spamassassin.c;  ) > 2.1.0cvs7.patchset
 ( cvs diff -u -r 1.96.2.107 -r 1.96.2.108 src/textview.c;  ) > 2.1.0cvs8.patchset
 ( cvs diff -u -r 1.207.2.92 -r 1.207.2.93 src/folderview.c;  ) > 2.1.0cvs9.patchset
+( cvs diff -u -r 1.1.2.12 -r 1.1.2.13 manual/advanced.xml;  ) > 2.1.0cvs10.patchset
